# omelet

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md
linux/src/base/: address.hpp  aes.cpp  log.cpp  packet.hpp  r_map.hpp
linux/src/client/: main.cpp
linux/src/relay/: main.cpp
linux/src/server/: main.cpp
linux/util/: random_aes_key.cpp
src/base/linux/: aes.h  global.h  log.cpp  log.h  router.h  thread_safe.h
src/client/linux/: main.cpp
src/linux/base/: address.cpp  address.hpp  aes.hpp  global.hpp  include.hpp  log.cpp  log.hpp  packet.cpp  packet.hpp
src/linux/client/: main.cpp
src/linux/relay/: main.cpp
src/linux/server/: main.cpp
src/server/: main.cpp
util/: random_aes_key.cpp
